--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
+    "winston": "^3.18.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/nodemailer": "^6.4.15",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.11.5",
     "tsx": "^4.7.0",
